# tests

./: .gitignore
build_capi/: build_capi.sh
dlnel/: Dockerfile  build_push.sh  prepare.sh  run_0.sh  start.sh
doc/: Codereview.mmap  Go.mmap  ISSUE.mmap  Rpc.mmap  deeplearningplatform.mmap  领域.mmap
fun/: 600276  600276.bak  set_env.sh  test_config.py  test_vis_rz_rq.py
grpc_test/: Makefile  c4.sh  client.cc  elapsed_time.h  grpc_service.h  helloworld.pb.cc  loop.sh  mem_timed.cc  s1_c1.sh  s4_c1.sh  server.cc  start_client.sh  start_server.sh  stat_s4_c4.sh  threadpool.cc  threadpool.h  util.h
paddle/: .install_dependent.sh.un~  .set_env.sh.un~  .vimrc  Dockerfile  README.md  build.sh  build_push.sh  debug_cpu.sh  debug_gpu.sh  fix_ci_brpcserial.sh  get_mod_func.py  install_dependent.sh  release_centos6u3_gpu.sh  release_centos6u3_rdma_gpu.sh  release_gpu.sh  set_env.sh  test_dist.sh
pylint/: .docstring_checker.py.swp  docstring_checker.py  test_1.py  test_docstring_checker.py
pytorch/: main.py  run.sh
rpcfuse/: Dockerfile  build_push.sh  paddle_k8s  prepare.sh  preparedata.py
test/: allocfile.go  cmd_parser  cmd_parser.go  copy.go  p11.go  p12.go  paddlecloud.go  readfile.go  test  test_div.go  test_err.go  test_glog.go  test_json.go  test_json2.go  test_md5.go  test_param.go  test_parseurl.go  test_path.go  test_post.go  test_printf.go  test_record_3.py  test_recordio.py  test_recordio_2.py  test_singleton.cpp  test_type.go  test_url.go  walk.go
text_classification/: text_fluid.py
tools/: get_cpu_percent.sh  psutils.py
transformer/: Dockerfile  build_push.sh  clean_job_output.sh  env.sh  pip.conf  prepare.sh  run_job.sh  run_job_cloud_local.sh  run_job_cloud_local_1card.sh  run_job_cloud_local_batch2048.sh  run_job_nccl2.sh
verb/: get_word_f.py
word/: gen.py  google1.html  (+4 more)
zhangtai/: CMakeLists.txt  README.md  main.cpp  run.sh
(+27 files in other folders)
