cmake_minimum_required(VERSION 3.2)
project(exeModel)

set(CMAKE_CXX_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
#SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
find_package (Threads)
if(UNIX AND NOT APPLE)
    set(CMAKE_C_COMPILER "/opt/compiler/gcc-4.8.2/bin/gcc")
    set(CMAKE_CXX_COMPILER "/opt/compiler/gcc-4.8.2/bin/g++")
endif()
include_directories("/home/gongwb/paddletest/zhangtai/baidu/persional-code-zhangtai01/modelforward")
set(SOURCE_FILES main.cpp common.h modelInput.h modelInput.cpp)
link_directories(/home/users/zhangtai01/paddleTest/baidu/third-party/paddle-capi/lib)
#link_directories(/home/users/zhangtai01/paddleCapi/lib /opt/compiler/gcc-4.8.2/lib64 /opt/compiler/gcc-4.8.2/lib)
#link_libraries(libpaddle_capi_whole.a)
if(UNIX AND NOT APPLE)
	#link_libraries(/home/gongwb/paddletest/zhangtai/baidu/persional-code-zhangtai01/modelforward/lib/libpaddle_capi_shared.so)
    link_libraries(/home/gongwb/paddletest/zhangtai/baidu/persional-code-zhangtai01/modelforward/lib/third_party/gflags/lib/libgflags.a)
    link_libraries(/home/gongwb/paddletest/zhangtai/baidu/persional-code-zhangtai01/modelforward/lib/third_party/glog/lib/libglog.a)
    link_libraries(/home/gongwb/paddletest/zhangtai/baidu/persional-code-zhangtai01/modelforward/lib/third_party/protobuf/lib//libprotobuf.a)
    link_libraries(/home/gongwb/paddletest/zhangtai/baidu/persional-code-zhangtai01/modelforward/lib/third_party/zlib/lib/libz.a)
    #link_libraries(libmkldnn.so)
    #link_libraries(libmklml_intel.so)
endif()
add_executable(exeModel ${SOURCE_FILES})
target_link_libraries (exeModel Threads::Threads -L/home/gongwb/paddletest/zhangtai/baidu/persional-code-zhangtai01/modelforward/now_mkl/ -lpaddle_capi_shared)
